# StardewModManager

./: .gitignore  README.md  meson.build
include/: MainWindow.hpp  bootstrap.hpp
src/: MainWindow.cpp  bootstrap.cpp  main.cpp
